flux/infrastructure-2/prometheus/ingressroute-alertmanager.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-alertmanager
  namespace: prometheus
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.mushroomkingdom.io`) && (PathPrefix(`/alertmanager`)
      services:
        - name: prometheus-prometheus-alertmanager
          port: 80
